@startuml classStructure

protocol loop_Core0

protocol loop_Core1

class ShiftRegisterHandler
ShiftRegisterHandler : init()
ShiftRegisterHandler : latch()

class KeyboardHandler
KeyboardHandler : init()
KeyboardHandler : updateKeyMatrix()
KeyboardHandler : *pSrHandler_

class DisplayHandler
DisplayHandler : init()
DisplayHandler : startiScreen()
DisplayHandler : mainScreen()
DisplayHandler : bongoScreen()
DisplayHandler : *pBatHandler_
DisplayHandler : *pKbdHandler_
DisplayHandler : *pRgbInterface_

interface RgbInterface
RgbInterface : virtual SetColors(r,g,b)      
RgbInterface : virtual setBrightnes(val)     
RgbInterface : virtual setEffect(effectCode)

class RgbHandler
RgbHandler : init()
RgbHandler : virtual SetColors(r,g,b)     
RgbHandler : virtual setBrightnes(val)    
RgbHandler : virtual setEffect(effectCode)
RgbHandler : effectPulse()
RgbHandler : effectStatic()
RgbHandler : ...()

class BatteryHandler
BatteryHandler : init()
BatteryHandler : updateBatteryHandler()
BatteryHandler : Voltage
BatteryHandler : SOC

class encHandler
encHandler : init()
encHandler : updateEnc()


KeyboardHandler ..> ShiftRegisterHandler
DisplayHandler ..> BatteryHandler
DisplayHandler ..> KeyboardHandler
DisplayHandler --> RgbInterface
DisplayHandler <--> encHandler

RgbInterface <|-- RgbHandler

loop_Core1 -- KeyboardHandler

loop_Core0 -- DisplayHandler



@enduml